[tool.poetry]
name = "statis-pro_baseball"
version = "0.1.0"
description = "Recreation of the Avalon Hill baseball simulation game Statis-Pro Baseball using python"
authors = ["Richard Olpin <rich.olpin@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
MLB-StatsAPI = "^0.0.9"
requests = "^2.22"
python-box = "^3.4"
pytest = "^5.0"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
